Add serialization; fix enum serialization; add archives for solutions

--- a/BasicSerialization/BasicSerialization/BasicSerialization.csproj
+++ b/BasicSerialization/BasicSerialization/BasicSerialization.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\Catalog.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
